Fixed method for getting best covers, the best cover can now be within 25% of the original aspect ratio.

--- a/src/main/resources/static/css/entry.css
+++ b/src/main/resources/static/css/entry.css
@@ -123,7 +123,7 @@ ul {
 
 li {
 	
-	margin-right: 1rem;
+	margin-right: 2rem;
 	flex-basis: 30%;
 }
 
